@@ -1,3 +1,11 @@
+2000-10-30  Kazu Hirata  <kazu@hxi.com>
+
+	* expr.c: Fix formatting.
+	* flonum-copy.c: Likewise.
+	* flonum.h: Likewise.
+	* gasp.c: Likewise.
+	* hash.c: Likewise.
+
 2000-10-30  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* as.h (OPTION_MD_BASE): Bump to 190.
